set @base input[type='text'] to font weight to 400 to match prod, fixed survey preview being z-index 9999px by wrapping in .survey-view

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1124,6 +1124,10 @@ $xxl: 1600px;
     ::file-selector-button {
         border-color: var(--border-primary, currentColor);
     }
+
+    input[type='text'] {
+        font-weight: 400;
+    }
 }
 
 input[type='radio'] {
